<resources>
    <string name="app_name">Project 2</string>
    <string name="form_title">Input Nomor Telepon</string>
    <string name="phone_number_hint">Nomor Telepon</string>
    <string name="number_type">Jenis Nomor</string>
    <string name="type_personal">Pribadi</string>
    <string name="type_home">Telp Rumah</string>
    <string name="type_office">Telp Kantor</string>
    <string name="submit">Submit</string>
    <string name="name_hint">Nama Lengkap</string>
    <string name="email_hint">Alamat Email</string>
    <string name="display_title">Informasi</string>
    <string name="back_button_text">Kembali ke Halaman Utama</string>
</resources>
